2015-11-18  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>

	* Add analytic SKAT-O model
	* Clean codes

2015-11-10  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve kinship calculation (--kinshipEigen)
	* Improve dosage supports for both autosomes and X chromosomes
	* Improve logistic regression speed in meta analysis
	* Add allelic Fisher's exact test
	* Add NumPolyVar in gene/set based tests
	* Add pre-regression checkings
	* Avoid SegFault when the data files are inaccessible
	* Clean codes

2015-10-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug when generating covariance matrix

2015-09-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability of logistic regression model
	* Clean codes
	* Revise documentation
	* Support multi-allelic sites better
	* Fix allele frequency calculations for dosages in meta models
	* Fix reset function so that results are reset each time

2015-08-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise Price's VT implementation
	* Clean up codes
	* Include zlib

2015-08-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add version checker for Linux version
	* Improve user interface by print effective commandline options

2015-08-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve SKAT accuracy to match SKAT R package
	* Add option maxMAF for vcf2plink

2015-07-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix covariance bugs for binary traits of unrelated individuals

2015-07-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability for Price's VT test
	* Improve error handling when files are missing
	* Fix calculation of minor allele frequency when extracting genotypes

2015-06-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve SKAT speed
	* Improve error handling when files are missing
	* Provide more warning messages
