@@ -1,10 +1,10 @@
 fid iid fatid matid sex y1 y2 y3 y4
 P1 P1 0 0 0 1.911 -1.465 -0.817 1
-P2 P2 0 0 0 2.146 -2.451 -0.178 2
-P3 P3 0 0 0 1.086 -1.194 -0.899 1
-P4 P4 0 0 0 0.704 -1.052 -0.237 1
+P2 P2 0 0 2 2.146 -2.451 -0.178 2
+P3 P3 0 0 2 1.086 -1.194 -0.899 1
+P4 P4 0 0 2 0.704 -1.052 -0.237 1
 P5 P5 0 0 1 2.512 -3.085 -2.579 1
-P6 P6 0 0 0 1.283 -1.294 -0.342 1
-P7 P7 0 0 0 2.384 1.070 -1.522 2
+P6 P6 0 0 2 1.283 -1.294 -0.342 1
+P7 P7 0 0 1 2.384 1.070 -1.522 2
 P8 P8 0 0 1 3.004 0.680 -1.875 1
-P9 P9 0 0 0 0.714 -0.116 -1.604 1
+P9 P9 0 0 1 0.714 -0.116 -1.604 1
